--- a/Website.html
+++ b/Website.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0109)file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
 
     <title>My page title</title>
@@ -8,12 +10,18 @@
 
     <style>
       :root {
-        --base-font-color: rgb(131,148,150);
+        color{
+        --base-font-color: rgb(131,148,150);}
+        
         --secondary-font-color: rgb(88,110,117);
         --emphasised-font: rgb(147,161,161);
 
-        --c-background-color: rgb(0, 43, 54);
-        --c-background-highlights: rgb(7, 54, 66);
+        body{
+        --c-background-color: rgb(0, 43, 54);}
+        header{  
+        --c-background-highlights: rgb(7, 54, 66);}
+        footer{ 
+        --c-background-highlights: rgb(7, 54, 66);}
 
         --c-yellow: rgb(181,137,  0);
         --c-orange: rgb(203, 75, 22);
@@ -95,4 +103,5 @@
     </footer>
 
   
-</body></html>
+</body>
+</html>
