--- a/Website.html
+++ b/Website.html
@@ -53,6 +53,9 @@
       main{
         color: rgb(131,148,150);
       }
+
+      a{color: rgb(211, 54,130);}
+      a:hover{color: rgb(203, 75, 22);}
     </style>
 
   </head>
