create a border for each subsection

--- a/Website.html
+++ b/Website.html
@@ -9,22 +9,16 @@
     <!--link href="./Website_files/css" rel="stylesheet" type="text/css"-->
 
     <!--style>
-        main
-        {
-          base-font-color: rgb(131,148,150);}
+        --base-font-color: rgb(131,148,150);}
         
         --secondary-font-color: rgb(88,110,117);
         --emphasised-font: rgb(147,161,161);
 
-        body{
-          c-background-color: rgb(0, 43, 54);
-        }
+        --c-background-color: rgb(0, 43, 54);
 
-        header{  
-          background-highlights: rgb(7, 54, 66);}
+        --c-background-highlights: rgb(7, 54, 66);}
 
-        footer{   
-          background-highlights: rgb(7, 54, 66);}
+        --c-background-highlights: rgb(7, 54, 66);}
 
         --c-yellow: rgb(181,137,  0);
         --c-orange: rgb(203, 75, 22);
@@ -56,6 +50,8 @@
 
       a{color: rgb(211, 54,130);}
       a:hover{color: rgb(203, 75, 22);}
+
+      div{border: solid 3px rgb(42,161,152);}
     </style>
 
   </head>
@@ -88,21 +84,25 @@
 
       <!-- It contains an article -->
       <article>
-        <h1>Article heading</h1>
+        <div><h1>Article heading</h1>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
+        </div>
 
-        <h3>Subsection</h3>
+        <div><h3>Subsection</h3>
 
         <p>Donec ut librero sed accu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.</p>
 
         <p>Pelientesque auctor nisi id magna consequat sagittis. Curabitur dapibus, enim sit amet elit pharetra tincidunt feugiat nist imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros.</p>
+        </div>
 
-        <h3>Another subsection</h3>
+        <div><h3>Another subsection</h3>
 
         <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum soclis natoque penatibus et manis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
 
         <p>Vivamus fermentum semper porta. Nunc diam velit, adipscing ut tristique vitae sagittis vel odio. Maecenas convallis ullamcorper ultricied. Curabitur ornare, ligula semper consectetur sagittis, nisi diam iaculis velit, is fringille sem nunc vet mi.</p>
+        </div>
+
       </article>
 
       <!-- the aside content can also be nested within the main content -->
