Header centered changed size and color

--- a/Website.html
+++ b/Website.html
@@ -36,7 +36,10 @@
       }
       header{
         background-color: rgb(7, 54, 66);
-        color: rgb(131,148,150);
+        color: rgb(181,137,  0) ;
+        text-align: center;
+        font-size: 150%;
+
       }
 
       footer{
@@ -52,6 +55,7 @@
       a:hover{color: rgb(203, 75, 22);}
 
       div{border: solid 3px rgb(42,161,152);}
+
     </style>
 
   </head>
