remove bullet points in unordered list

--- a/Website.html
+++ b/Website.html
@@ -56,6 +56,10 @@
 
       div{border: solid 3px rgb(42,161,152);}
 
+      li{
+        list-style-type: none;
+      }
+
     </style>
 
   </head>
