flex layout for navbar

--- a/Website.html
+++ b/Website.html
@@ -60,6 +60,12 @@
         list-style-type: none;
       }
 
+      .nav-list{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
+
     </style>
 
   </head>
@@ -72,20 +78,21 @@
     </header>
 
     <nav>
-      <ul>
+      <ul class= "nav-list">
         <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Home</a></li>
         <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Our team</a></li>
         <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Projects</a></li>
         <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Contact</a></li>
       </ul>
+    </nav>
 
-       <!-- A Search form is another common non-linear way to navigate through a website. -->
+    <!-- A Search form is another common non-linear way to navigate through a website. -->
 
-       <form>
-         <input type="search" name="q" placeholder="Search query">
-         <input type="submit" value="Go!">
-       </form>
-     </nav>
+    <form>
+      <input type="search" name="q" placeholder="Search query">
+      <input type="submit" value="Go!">
+    </form>
+     
 
     <!-- Here is our page's main content -->
     <main>
