change color for aside links

--- a/Website.html
+++ b/Website.html
@@ -30,6 +30,7 @@
         --c-green: rgb(133,153,0);
       
     </style-->
+
     <style>
       body{
         background-color: rgb(0, 43, 54);
@@ -51,20 +52,39 @@
         color: rgb(131,148,150);
       }
 
-      a{color: rgb(211, 54,130);}
-      a:hover{color: rgb(203, 75, 22);}
-
       div{border: solid 3px rgb(42,161,152);}
-
-      li{
-        list-style-type: none;
-      }
 
       .nav-list{
         display: flex;
         justify-content: space-between;
         align-items: center;
       }
+
+      .nav-item{
+        list-style-type: none;}
+
+      .nav-item a{
+        color: rgb(211, 54,130);
+      }
+
+      .nav-item a:hover{
+        color: rgb(203, 75, 22);
+      }
+
+      aside{
+        color: rgb(133,153,0) ;
+      }
+
+      .item a{
+        color: rgb(220, 50, 47);
+      }
+
+      .item a:hover{
+        color: rgb(38,139,210);
+      }
+
+
+      
 
     </style>
 
@@ -79,10 +99,10 @@
 
     <nav>
       <ul class= "nav-list">
-        <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Home</a></li>
-        <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Our team</a></li>
-        <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Projects</a></li>
-        <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Contact</a></li>
+        <li class="nav-item"><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Home</a></li>
+        <li class="nav-item" ><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Our team</a></li>
+        <li class="nav-item"><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Projects</a></li>
+        <li class="nav-item"><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Contact</a></li>
       </ul>
     </nav>
 
@@ -125,11 +145,11 @@
         <h2>Related</h2>
 
         <ul>
-          <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Oh I do like to be beside the seaside</a></li>
-          <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Oh I do like to be beside the sea</a></li>
-          <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Although in the North of England</a></li>
-          <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">It never stops raining</a></li>
-          <li><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Oh well...</a></li>
+          <li class="item"><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Oh I do like to be beside the seaside</a></li>
+          <li class="item"><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Oh I do like to be beside the sea</a></li>
+          <li class="item"><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Although in the North of England</a></li>
+          <li class="item"><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">It never stops raining</a></li>
+          <li class="item"><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Oh well...</a></li>
         </ul>
       </aside>
 
