--- a/Website.html
+++ b/Website.html
@@ -34,13 +34,14 @@
     <style>
       body{
         background-color: rgb(0, 43, 54);
+        width: 800px;
       }
+
       header{
         background-color: rgb(7, 54, 66);
         color: rgb(181,137,  0) ;
         text-align: center;
         font-size: 150%;
-
       }
 
       footer{
@@ -83,8 +84,24 @@
         color: rgb(38,139,210);
       }
 
+      .heading{
+        padding-top: 50px;
+      }
 
-      
+      main{
+        display: flex;
+        flex-wrap: wrap;
+      }
+
+      article{
+        flex: 2;
+      }
+
+      aside{
+        flex: 1;
+      }
+
+
 
     </style>
 
@@ -119,19 +136,19 @@
 
       <!-- It contains an article -->
       <article>
-        <div><h1>Article heading</h1>
+        <div><h1 class="heading">Article heading</h1>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt congue enim, ut porta lorem lacinia consectetur.</p>
         </div>
 
-        <div><h3>Subsection</h3>
+        <div><h3 class="heading">Subsection</h3>
 
         <p>Donec ut librero sed accu vehicula ultricies a non tortor. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aenean ut gravida lorem. Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.</p>
 
         <p>Pelientesque auctor nisi id magna consequat sagittis. Curabitur dapibus, enim sit amet elit pharetra tincidunt feugiat nist imperdiet. Ut convallis libero in urna ultrices accumsan. Donec sed odio eros.</p>
         </div>
 
-        <div><h3>Another subsection</h3>
+        <div><h3 class="heading">Another subsection</h3>
 
         <p>Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum soclis natoque penatibus et manis dis parturient montes, nascetur ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem facilisis semper ac in est.</p>
 
@@ -144,7 +161,7 @@
       <aside>
         <h2>Related</h2>
 
-        <ul>
+        <ul class="links">
           <li class="item"><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Oh I do like to be beside the seaside</a></li>
           <li class="item"><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Oh I do like to be beside the sea</a></li>
           <li class="item"><a href="file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html#">Although in the North of England</a></li>
