--- a/Website_files/Website.html
+++ b/Website_files/Website.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0109)file:///C:/Users/marga/OneDrive/Desktop/Data%20Analytics/IT/Assessments/Web%20Skills%20HTML%20start_page.html -->
-<html>
+<html lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
