--- a/Java/index.html
+++ b/Java/index.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1 id="heading"></h1>
+    <p id="p1"></p>
+    <p id="p2"></p>
+    <p id="p3"></p>
+
+
+
+
+    
     <script src="java.js"></script>
     
 </body>
